<resources>
    <string name="app_name">Feedity</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account">Account</string>
    <string name="upload_an_image">Upload An Image</string>
    <string name="capture_and_upload">Capture And Upload</string>
    <string name="todo">TODO</string>
    <string name="feedity">Feedity</string>


</resources>
