<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="209dp"
        android:backgroundTint="@color/colorAccent"
        android:lineSpacingExtra="14sp"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="202dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:textColor="?attr/actionMenuTextColor" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="297dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:textColor="?attr/actionMenuTextColor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="121dp"
        android:lineSpacingExtra="8sp"
        android:padding="2dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="36sp" />

    <Button
        android:id="@+id/SignInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="-154dp"
        android:backgroundTint="?attr/colorAccent"
        android:padding="10dp"
        android:text="@string/sign_up"

        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="172dp"
        android:padding="10dp"
        android:text="@string/forgot_password"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="154dp"
        android:text="@string/or"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="14sp" />


    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="57dp"
        android:id="@+id/googleBtn"></com.google.android.gms.common.SignInButton>
</RelativeLayout>